--- a/themes/uhsg_theme/sass/components/_paragraph.scss
+++ b/themes/uhsg_theme/sass/components/_paragraph.scss
@@ -1,9 +1,3 @@
-.paragraph {
-  &:nth-child(odd) {
-    background: $lightsilver;
-  }
-}
-
 .paragraph__title {
   margin-bottom: 1em;
 }
